2008-03-30  Martin Nordholts  <martinn@svn.gnome.org>

	* app/widgets/gimpcontainertreeview-dnd.c
	(gimp_container_tree_view_drag_drop): Make all code paths result
	in a call to gtk_drag_finish() if we return TRUE. Fixes bug
	#317992.

2008-03-30  Sven Neumann  <sven@gimp.org>

	* app/core/gimparea.c (gimp_area_list_process): code cleanup.

2008-03-30  Sven Neumann  <sven@gimp.org>

	* app/core/gimparea.c (gimp_area_list_free): don't leak the memory
	allocated for the GSList.

2008-03-30  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainertreeview.c: added a finalizer that frees
	the memory allocated for the cell lists.

2008-03-30  Sven Neumann  <sven@gimp.org>

	* app/xcf/xcf-load.c (xcf_load_image): don't leak the grid.

2008-03-30  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_scale_changed):
	never set the dest_inc and src_dec variables to zero.

2008-03-30  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-cursor.[ch]: added new function
	gimp_display_shell_unset_cursor().
	(gimp_display_shell_real_set_cursor): deal with cursor_type -1 and
	change the cursor to the default desktop cursor. Fixes warnings on
	image load.

	* app/display/gimpdisplayshell.c (gimp_display_shell_empty):
	use gimp_display_shell_unset_cursor().

2008-03-30  Sven Neumann  <sven@gimp.org>

	* gimpheal.c (gimp_heal_motion): applied the same cleanups as in
	the gimp-2-4 branch (see bug #521433).

2008-03-30  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpcanvas.c
	* app/widgets/gimpcoloreditor.c
	* app/widgets/gimpcolorframe.c
	* app/widgets/gimpcursorview.c
	* app/widgets/gimpcurveview.c
	* app/widgets/gimpdataeditor.c
	* app/widgets/gimpdock.c
	* app/widgets/gimpdockable.c
	* app/widgets/gimpdockbook.c
	* app/widgets/gimpdockseparator.c
	* app/widgets/gimpeditor.c
	* app/widgets/gimplayertreeview.c
	* app/widgets/gimpmenudock.c
	* app/widgets/gimpsamplepointeditor.c